# datalake-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml
docs/guide/: claude_code_guide.md  user_guide.md
scripts/: mcp-server-entrypoint.sh
src/: main.py  settings.py
src/async_query/: __init__.py  executor.py  job_store.py  s3_client.py
src/cache/: redis_cache.py
src/delta_lake/: data_store.py  delta_service.py  hive_metastore.py  setup_spark_session.py  spark_utils.py
src/postgres/: connection.py
src/routes/: async_query.py  delta.py  health.py
src/service/: app_state.py  config.py  dependencies.py  error_mapping.py  errors.py  exception_handlers.py  exceptions.py  kb_auth.py  models.py  query_executor.py  sc_health.py  spark_session_pool.py  standalone_operations.py  stateless_http_transport.py  timeouts.py
src/trino_engine/: trino_connection.py  trino_data_store.py  trino_service.py
tests/: conftest.py  test_main.py
tests/async_query/: test_executor.py  test_job_store.py  test_s3_client.py
tests/cache/: test_redis_cache.py
tests/delta_lake/: test_data_store.py  test_delta_service.py  test_hive_metastore.py  test_setup_spark_session.py
tests/postgres/: test_connection.py  test_hive_metastore.py
tests/routes/: test_async_query.py  test_delta.py  test_health.py
tests/service/: test_app_state.py  test_arg_checkers.py  test_dependencies.py  test_exception_handlers.py  test_exceptions.py  test_kb_auth.py  test_query_executor.py  test_sc_health.py  test_spark_session_pool.py  test_standalone_operations.py  test_stateless_http_transport.py  test_timeouts.py
tests/test_trino_engine/: test_trino_connection.py  test_trino_data_store.py  test_trino_service.py
