[project]
name = "datalake-mcp-server"
version = "0.1.0"
description = "BERDL Datalake MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "fastapi-mcp==0.4.0",
    "mcp==1.25.0",
    "aiohttp==3.13.2",
    "cacheout==0.16.0",
    "redis==7.1.0",
    "psycopg==3.3.2",
    "sqlparse==0.5.5",
    "ruff==0.14.10",
    "berdl_notebook_utils",
]

[tool.uv.sources]
berdl_notebook_utils = { git = "https://github.com/BERDataLakehouse/spark_notebook.git", subdirectory = "notebook_utils", rev = "main" }

[dependency-groups]
dev = [
    "ipython==9.7.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
]

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2