[project]
name = "datalake-mcp-server"
version = "0.1.0"
description = "BERDL Datalake MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.42.0",
    "fastapi-mcp==0.4.0",
    "mcp==1.26.0",
    "aiohttp==3.13.5",
    "cacheout==0.16.0",
    "redis==7.4.0",
    "sqlparse==0.5.5",
    "ruff==0.15.8",
    "boto3>=1.40.70",
    "httpx==0.28.1",
    "berdl_notebook_utils",
    "trino==0.337.0",
]

[tool.uv.sources]
berdl_notebook_utils = { git = "https://github.com/BERDataLakehouse/spark_notebook.git", subdirectory = "notebook_utils", rev = "main" }

[dependency-groups]
dev = [
    "ipython==9.10.0",
    "pytest==9.0.3",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2